@@ -23,7 +23,8 @@ libkppInterface_la_SOURCES = \
 	kppPlannerPanelController.cpp \
 	kppPlannerPanel.cpp \
 	kwsGraphicRoadmapDelegate.cpp \
-	kwsGraphicRoadmap.cpp
+	kwsGraphicRoadmap.cpp \
+	kppCommandOpenFile.cpp
 
 libkppInterface_la_LDFLAGS= \
 	@HPPCORBASERVER_LIBS@ \
